Tag rss button: fix css so the icon is actually visible.

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -562,6 +562,10 @@ The knock-on effect of this is ugly browser-scroll bars at the bottom, so 80px o
     fill: #fff;
 }
 
+.site-title .rss-button svg {
+    fill: inherit;
+}
+
 /* Special behaviors for home navigation */
 
 .home-template .site-nav-main {
